Add links to educational achievements
Added links to academic achievements for better visibility.

--- a/education.html
+++ b/education.html
@@ -78,7 +78,7 @@
     <div class="edu-details">
       <h3>Sangolli Rayanna Memorial Residential School, Nandagad</h3>
       <p><strong>High School (SSLC)</strong></p>
-      <p>Graduated with an outstanding score of <strong>99.21%</strong>.<br>
+      <p>Graduated with an outstanding score of <strong>99.21%</strong> <a href="10th.jpg"> click here!</a>.<br>
          During my schooling, I developed a strong academic foundation and <br>
           participated actively in various co-curricular and leadership activities, shaping both my discipline and confidence.</p>
     </div>
@@ -89,7 +89,7 @@
     <div class="edu-details">
       <h3>Poorna PU College, Dharwad</h3>
       <p><strong>Pre-University Course (PUC)</strong></p>
-      <p>Completed with an excellent score of <strong>94%</strong>.<br>
+      <p>Completed with an excellent score of <strong>94%</strong><a href="2ndpu.jpg"> click here!</a>.<br>
          My PUC years helped me strengthen my analytical and <br>
           problem-solving abilities, and fostered my growing passion for engineering and technology.</p>
     </div>
@@ -105,4 +105,5 @@
     </div>
   </div>
 </body>
+
 </html>
